Add images to 6th row of landscape page

--- a/landscapes.html
+++ b/landscapes.html
@@ -160,7 +160,7 @@
 
         <div class="album">
             <img src="assets/images/lavender.jpg" alt="Lavender field and a country house">
-            <h3>Lavender</h3>
+            <h3>The Lavender</h3>
             <p>Oil, canvas on cardboard, size 10x15cm. 2021.</p>
             <hr>
         </div>
@@ -176,22 +176,22 @@
 
     <section>
         <div class="album">
-            <img src="assets/images/belka-tulip.jpg" alt="Squirrel with a tulip.">
-            <h3>Squirrel with a tulip</h3>
-            <p>Oil paint on canvas, size 20x30cm. 2021.</p>
+            <img src="assets/images/yaht.jpg" alt="Yaht at dawn, the calm sea">
+            <h3>The Yaht at Dawn</h3>
+            <p>Oil on canvas, size 40x50cm. 2021.</p>
             <hr>
         </div>
 
         <div class="album">
-            <img src="assets/images/stroboscop.jpg" alt="A cat">
-            <h3>Stop music (my kitty dances with another cat)</h3>
-            <p>Oil paint on canvas, size 25x35cm. 2021.</p>
+            <img src="assets/images/domik.jpg" alt="A small house in the middle of the lake">
+            <h3> A Little House</h3>
+            <p>Oil  on canvas, size 20x30cm. 2020.</p>
             <hr>
         </div>
         <div class="album">
-            <img src="assets/images/tiger18x24.jpg" alt="Tiger">
-            <h3>Tiger</h3>
-            <p>Oil paint on canvas, size 18x24cm. 2021.</p>
+            <img src="assets/images/sail.jpg" alt="A sailboat at dawn">
+            <h3>The Sail</h3>
+            <p>Oil, canvas on cardboard, size 10x15cm. 2021.</p>
             <hr>
         </div>
     </section><br>
@@ -200,24 +200,24 @@
 
     <section>
         <div class="album">
-            <img src="assets/images/tigercub.jpg" alt="Tigercub">
-            <h3>Tigercub</h3>
-            <p>Oil paint on canvas, size 20x20cm. 2021.</p>
+            <img src="assets/images/montenegro.jpg" alt="Montenegro, Igalo bay painting">
+            <h3>Montenegro</h3>
+            <p>Oil on canvas, size 50x70cm. 2021. Unfinished.</p>
              
             <hr>
         </div>
 
         <div class="album">
-            <img src="assets/images/hunter15x15.jpg" alt="Kitty-hunter">
-            <h3>Kitty-hunter</h3>
-            <p>Oil paint on canvas, size 15x15cm. 2021.</p>
+            <img src="assets/images/poppy-sunset.jpg" alt="Poppies at sunset near the sea">
+            <h3>Poppies at sunset</h3>
+            <p>Oil, canvas on cardboard, size 30x40cm. 2021.</p>
             <hr>
         </div>
 
         <div class="album">
-            <img src="assets/images/hunter20x20.jpg" alt="Kitty-hunter-2">
-            <h3>Kitty-hunter-2</h3>
-            <p>Oil paint on canvas, size 20x20cm. 2021.</p>
+            <img src="assets/images/wave.jpg" alt="Sunlight wave in the blue sea ">
+            <h3>Wave</h3>
+            <p>Oil  on canvas, size 40x50cm. 2009.</p>
             <hr>
         </div>
     </section><br>
