Add navigation up and down the pages

--- a/index.html
+++ b/index.html
@@ -190,6 +190,12 @@
             </span>
         </div>
     </div>
+    
+<div class="text-center">
+    <p>That is all so far. 😉 </p><br>
+
+    <a href="index.html" aria-label="Go to the top of the page Landscapes Album"> Back to the Top of the page ⬆️</a>
+</div>
 
     <!--  Footer on main page -->
 
@@ -197,7 +203,7 @@
         <div class="text-center">
             You can see more Juniva's paintings on  <i class="fa-brands fa-instagram-square"></i>&nbsp;<a href="https://instagram.com/juniva.art" target="_blank" rel="noopener" aria-label="Visit Juniva's page on Instagram (opens in new tab)">Instagram</a><br>
             If you have question or offers please contact Juniva by Direct in Instagram.<br>
-            Copyright Juniva 2020.
+            Copyright Juniva 1981-2022.
         </div>
         
     </footer>
