--- a/landscapes.html
+++ b/landscapes.html
@@ -28,10 +28,10 @@
                     <a href="index.html" aria-label="Go to main page">Home</a>
                 </li>
                 <li>
-                    <a href="animals.html" class="active" aria-label="Go to paintings with animals">Animals</a>
+                    <a href="animals.html" aria-label="Go to paintings with animals">Animals</a>
                 </li>
                 <li>
-                    <a href="landscapes.html" aria-label="Go to paintings with landscapes">Landscapes</a>
+                    <a href="landscapes.html" class="active" aria-label="Go to paintings with landscapes">Landscapes</a>
                 </li>
 
                 <li>
@@ -280,10 +280,11 @@
 
     </section><br>
 
+<div class="text-center">
+    <p>That is all so far. 😉 </p><br>
 
-    <p class="text-center">That is all so far. 😉 </p><br>
-
-
+    <a href="landscapes.html" aria-label="Go to the top of the page Landscapes Album"> Back to the Top of the page ⬆️</a>
+</div>
     <!--  Footer the same as on the main page -->
 
     <footer class="clear contacts" id="footer">
@@ -292,7 +293,7 @@
                 href="https://instagram.com/juniva.art" target="_blank" rel="noopener"
                 aria-label="Visit Juniva's page on Instagram (opens in new tab)">Instagram</a><br>
             If you have question or offers please contact Juniva by Direct in Instagram.<br>
-            Copyright Juniva 2020.
+            Copyright Juniva 1981-2022.
         </div>
 
     </footer>
