Add 1st row of images to flowers page

--- a/flowers.html
+++ b/flowers.html
@@ -1,1 +1,149 @@
-<h2>Flowers</h2>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Online gallery for the painter Juniva">
+    <meta name="keywords"
+        content="realistic art, abstract art, painter, artist, painting, paintings, cat picture, flower painting, landscape paintings">
+    <meta name="author" content="Juniva">
+    <link rel="stylesheet" href="assets/css/style.css">
+
+    <title>Landscape Album</title>
+</head>
+
+<body>
+    <header>
+
+        <div id="logo-bg">
+            <h1 id="logo">Landscape Album</h1>
+            <h2 id="motto">Sweet pictures to feast your eyes :)</h2>
+        </div>
+
+
+        <nav>
+            <ul id="menu">
+                <li>
+                    <a href="index.html" aria-label="Go to main page">Home</a>
+                </li>
+                <li>
+                    <a href="animals.html" aria-label="Go to paintings with animals">Animals</a>
+                </li>
+                <li>
+                    <a href="landscapes.html"  aria-label="Go to paintings with landscapes">Landscapes</a>
+                </li>
+
+                <li>
+                    <a href="flowers.html" class="active" aria-label="Go to paintings with flowers">Flowers</a>
+                </li>
+                <li>
+                    <a href="#footer" aria-label="Find us and contact us on Instagram">Contacts</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <!--  1st row of flowers paintings -->
+
+    <section>
+
+        <div class="album">
+            <img src="assets/images/summer-midday.jpg" alt="A Bunch of pink flowers on the window sill with a view to summer landscape">
+            <h3>The summer midday</h3>
+            <p>Oil, canvas on cardboard, size 30x40cm. 2022.</p>
+
+            <hr>
+        </div>
+
+        <div class="album">
+            <img src="assets/images/rozes.jpg" alt="Juniva at her picture with roses">
+            <h3>Juniva at her picture with roses. Roses.</h3>
+            <p>Oil on canvas, size 40x50cm. 2009.</p>
+
+            <hr>
+        </div>
+        <div class="album">
+            <img src="assets/images/poppy-sunset.jpg" alt="Poppies at sunset near the sea">
+            <h3>Poppies at sunset</h3>
+            <p>Oil, canvas on cardboard, size 30x40cm. 2021.</p>
+            <hr>
+        </div>
+    </section><br>
+
+    <!-- Second row of flowers paintings -->
+
+    <section>
+
+        <div class="album">
+            <img src="assets/images/cap1.jpg" alt="Painting of Saint-Jean-Cap-Ferrat. 1st copy">
+            <h3>Saint-Jean-Cap-Ferrat-1</h3>
+            <p>Oil, canvas on cardboard, 30x40cm. 2020.</p>
+            <hr>
+        </div>
+
+        <div class="album">
+            <img src="assets/images/cap2.jpg" alt="Painting of Saint-Jean-Cap-Ferrat. 2nd copy">
+            <h3>Saint-Jean-Cap-Ferrat-2</h3>
+            <p>Oil, canvas on cardboard, 30x40cm. 2020.</p>
+            <hr>
+        </div>
+
+        <div class="album">
+            <img src="assets/images/cap3.jpg" alt="Painting of Saint-Jean-Cap-Ferrat. 3rd copy">
+            <h3>Saint-Jean-Cap-Ferrat-3</h3>
+            <p>Oil, canvas on cardboard, 30x40cm. 2020.</p>
+            <hr>
+        </div>
+    </section>
+
+    <!--Third row of flowers paintings -->
+
+
+    <section> 
+    <div class="album">
+        <img src="assets/images/moon-mice.jpg" alt="Funny picture where mice  fly on brooms to the Cheese Moon">
+        <h3>The Cheese Moon</h3>
+        <p>Oil on canvas, size 30x40cm. 2021.</p>
+        <hr>
+    </div>
+
+    <div class="album">
+        <img src="assets/images/moon-mice2.jpg" alt="Fragment of painting The Cheese Moon.">
+        <h3>Fragment of The Cheese Moon</h3>
+        <p> Oil on canvas, size 30x40cm. 2021.</p>
+        <hr>
+    </div>
+    <div class="album">
+        <img src="assets/images/returning.jpg" alt="Grey kitty">
+        <h3>The Return</h3>
+        <p>Oil, canvas on cardboard, size 30x40cm. 1981.</p>
+        <hr>
+    </div>
+    </section><br>
+    
+<div class="text-center">
+    <p>That is all so far. 😉 </p><br>
+
+    <a href="landscapes.html" aria-label="Go to the top of the page Landscapes Album"> Back to the Top of the page ⬆️</a>
+</div>
+    <!--  Footer the same as on the main page -->
+
+    <footer class="clear contacts" id="footer">
+        <div class="text-center">
+            You can see more Juniva's paintings on <i class="fa-brands fa-instagram-square"></i>&nbsp;<a
+                href="https://instagram.com/juniva.art" target="_blank" rel="noopener"
+                aria-label="Visit Juniva's page on Instagram (opens in new tab)">Instagram</a><br>
+            If you have question or offers please contact Juniva by Direct in Instagram.<br>
+            Copyright Juniva 1981-2022.
+        </div>
+
+    </footer>
+
+    <!--  Fontawesome script  -->
+
+    <script src="https://kit.fontawesome.com/2e9af526bb.js" crossorigin="anonymous"></script>
+</body>
+
+</html>
+ 
