--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                  
             </span>
         </div>
-    </div>
+    </div><br>
     
 <div class="text-center">
     <p>That is all so far. 😉 </p><br>
