--- a/landscapes.html
+++ b/landscapes.html
@@ -98,14 +98,13 @@
             <h3>Saint-Jean-Cap-Ferrat-3</h3>
             <p>Oil, canvas on cardboard, 30x40cm. 2020.</p>
             <hr>
-
         </div>
-
-    </section><br>
+    </section>
 
     <!--Third row of landscape paintings -->
 
     <section>
+        <h2 class="site-idea text-center">If you only knew where inspiration comes from...</h2>
         <div class="row">
             <div class="column column-left">
                 <p>
@@ -133,6 +132,7 @@
         </div>
     </section>
 
+    <section> 
     <div class="album">
         <img src="assets/images/moon-mice.jpg" alt="Funny picture where mice  fly on brooms to the Cheese Moon">
         <h3>The Cheese Moon</h3>
