Add 2nd row of images to flowers page

--- a/flowers.html
+++ b/flowers.html
@@ -76,23 +76,23 @@
     <section>
 
         <div class="album">
-            <img src="assets/images/cap1.jpg" alt="Painting of Saint-Jean-Cap-Ferrat. 1st copy">
-            <h3>Saint-Jean-Cap-Ferrat-1</h3>
-            <p>Oil, canvas on cardboard, 30x40cm. 2020.</p>
+            <img src="assets/images/buket.jpg" alt="A Bunch of field flowers, a book and apricots">
+            <h3>Bouquet</h3>
+            <p>Oil, canvas on cardboard, 35x45cm. 2020.</p>
             <hr>
         </div>
 
         <div class="album">
-            <img src="assets/images/cap2.jpg" alt="Painting of Saint-Jean-Cap-Ferrat. 2nd copy">
-            <h3>Saint-Jean-Cap-Ferrat-2</h3>
-            <p>Oil, canvas on cardboard, 30x40cm. 2020.</p>
+            <img src="assets/images/magnolia.jpg" alt="Three pink magnolia flowers on the tree">
+            <h3>Magnolia</h3>
+            <p>Oil on canvas, 20x30cm. 2021.</p>
             <hr>
         </div>
 
         <div class="album">
-            <img src="assets/images/cap3.jpg" alt="Painting of Saint-Jean-Cap-Ferrat. 3rd copy">
-            <h3>Saint-Jean-Cap-Ferrat-3</h3>
-            <p>Oil, canvas on cardboard, 30x40cm. 2020.</p>
+            <img src="assets/images/poppy-lite.jpg" alt="Poppies near the sea">
+            <h3>Poppies.</h3>
+            <p>Oil on canvas, 30x30cm. 2021.</p>
             <hr>
         </div>
     </section>
