Add 3rd row to flowers page

--- a/animals.html
+++ b/animals.html
@@ -182,7 +182,7 @@
         <div class="album">
             <img src="assets/images/tigercub.jpg" alt="Tigercub">
             <h3>Tigercub</h3>
-            <p>Oil paint on canvas, size 20x20cm. 2021.</p>
+            <p>Oil paint on canvas, size 20x20cm. 2021. Juniva's copy of image from the Internet. Author is unknown.</p>
              
             <hr>
         </div>
@@ -240,7 +240,7 @@
         <div class="album">
             <img src="assets/images/ulibaka.jpg" alt="Smiling cat">
             <h3> Smiling cat</h3>
-            <p>Oil paint, canvas on cardboard, size 10x15cm. 2021.</p>
+            <p>Oil paint, canvas on cardboard, size 10x15cm. 2021. Juniva's copy of image from the Internet. Author is unknown.</p>
             <hr>
         </div>
         <div class="album">
@@ -276,7 +276,7 @@
 <div class="text-center">
     <p>That is all so far. 😉 </p><br>
 
-    <a href="animals.html" aria-label="Go to the top of the page Landscapes Album"> Back to the Top of the page ⬆️</a>
+    <a href="animals.html" aria-label="Go to the top of the page Animals Album"> Back to the Top of the page ⬆️</a>
 </div>
 
 
