--- a/flowers.html
+++ b/flowers.html
@@ -17,7 +17,7 @@
     <header>
 
         <div id="logo-bg">
-            <h1 id="logo">Landscape Album</h1>
+            <h1 id="logo">Flowers Album</h1>
             <h2 id="motto">Sweet pictures to feast your eyes :)</h2>
         </div>
 
@@ -66,7 +66,7 @@
         <div class="album">
             <img src="assets/images/poppy-sunset.jpg" alt="Poppies at sunset near the sea">
             <h3>Poppies at sunset</h3>
-            <p>Oil, canvas on cardboard, size 30x40cm. 2021.</p>
+            <p>Oil, canvas on cardboard, size 30x40cm. 2021.  By Olga Bazanova's masterclass.</p>
             <hr>
         </div>
     </section><br>
@@ -77,8 +77,8 @@
 
         <div class="album">
             <img src="assets/images/buket.jpg" alt="A Bunch of field flowers, a book and apricots">
-            <h3>Bouquet</h3>
-            <p>Oil, canvas on cardboard, 35x45cm. 2020.</p>
+            <h3>The summer bouquet</h3>
+            <p>Oil, canvas on cardboard, 35x45cm. 2020. By Olga Bazanova's masterclass.</p>
             <hr>
         </div>
 
@@ -90,8 +90,8 @@
         </div>
 
         <div class="album">
-            <img src="assets/images/poppy-lite.jpg" alt="Poppies near the sea">
-            <h3>Poppies.</h3>
+            <img src="assets/images/poppy-lite.jpg" alt="Poppies near the blue sea">
+            <h3>Poppies</h3>
             <p>Oil on canvas, 30x30cm. 2021.</p>
             <hr>
         </div>
@@ -101,23 +101,23 @@
 
 
     <section> 
-    <div class="album">
-        <img src="assets/images/moon-mice.jpg" alt="Funny picture where mice  fly on brooms to the Cheese Moon">
-        <h3>The Cheese Moon</h3>
-        <p>Oil on canvas, size 30x40cm. 2021.</p>
-        <hr>
-    </div>
+        <div class="album">
+            <img src="assets/images/basket-lavender.jpg" alt="The basket with lavender">
+            <h3>The basket with lavender.</h3>
+            <p>Oil, canvas on cardboard, 10x15cm. 2021. By Vugar Mamedov's masterclass.  </p>
+            <hr>
+        </div>
 
     <div class="album">
-        <img src="assets/images/moon-mice2.jpg" alt="Fragment of painting The Cheese Moon.">
-        <h3>Fragment of The Cheese Moon</h3>
-        <p> Oil on canvas, size 30x40cm. 2021.</p>
+        <img src="assets/images/crocus.jpg" alt="The crocus. A very nice picture in blue colors">
+        <h3>The crocus</h3>
+        <p> Oil on canvas, size 30x40cm. 2021. By Alexandr Maranov's masterclass.</p>
         <hr>
     </div>
     <div class="album">
-        <img src="assets/images/returning.jpg" alt="Grey kitty">
-        <h3>The Return</h3>
-        <p>Oil, canvas on cardboard, size 30x40cm. 1981.</p>
+        <img src="assets/images/daffodil.jpg" alt="Daffodils in the glass vase">
+        <h3>Daffodils</h3>
+        <p>Oil, canvas on cardboard, size 25x30cm. 2022.</p>
         <hr>
     </div>
     </section><br>
@@ -125,9 +125,10 @@
 <div class="text-center">
     <p>That is all so far. 😉 </p><br>
 
-    <a href="landscapes.html" aria-label="Go to the top of the page Landscapes Album"> Back to the Top of the page ⬆️</a>
+    <a href="flowers.html" aria-label="Go to the top of the page Flowers Album"> Back to the Top of the page ⬆️</a>
 </div>
-    <!--  Footer the same as on the main page -->
+
+ <!--  Footer the same as on the main page -->
 
     <footer class="clear contacts" id="footer">
         <div class="text-center">
