--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 <div class="text-center">
     <p>That is all so far. 😉 </p><br>
 
-    <a href="index.html" aria-label="Go to the top of the page Landscapes Album"> Back to the Top of the page ⬆️</a>
+    <a href="index.html" aria-label="Go to the top of the home page "> Back to the Top of the page ⬆️</a>
 </div>
 
     <!--  Footer on main page -->
