--- a/landscapes.html
+++ b/landscapes.html
@@ -17,7 +17,7 @@
     <header>
 
         <div id="logo-bg">
-            <h1 id="logo">Landscape Album</h1>
+            <h1 id="logo">Landscapes Album</h1>
             <h2 id="motto">Sweet pictures to feast your eyes :)</h2>
         </div>
 
@@ -66,7 +66,7 @@
         <div class="album">
             <img src="assets/images/rocks.jpg" alt="Painting of Rocks and the blue sea">
             <h3>Rocks</h3>
-            <p>Oil on laminate, size 18x19cm. 2021.</p>
+            <p>Oil on laminate, size 18x19cm. 2021. By Tatyana Bukreeva's masterclass.</p>
 
             <hr>
         </div>
@@ -168,13 +168,13 @@
         <div class="album">
             <img src="assets/images/lavender.jpg" alt="Lavender field and a country house">
             <h3>The Lavender</h3>
-            <p>Oil, canvas on cardboard, size 10x15cm. 2021.</p>
+            <p>Oil, canvas on cardboard, size 10x15cm. 2021. By Katya Fedorova's masterclass. </p>
             <hr>
         </div>
         <div class="album">
             <img src="assets/images/eyeof-light.jpg" alt="Abstract painting of the sailboat in the sunset">
             <h3>The Eye of Light</h3>
-            <p>Oil on canvas, size 25x35cm. 2022.</p>
+            <p>Oil on canvas, size 25x35cm. 2022. By Olga Bazanova's masterclass.</p>
             <hr>
         </div>
     </section><br>
@@ -185,20 +185,20 @@
         <div class="album">
             <img src="assets/images/yaht.jpg" alt="Yaht at dawn, the calm sea">
             <h3>The Yaht at Dawn</h3>
-            <p>Oil on canvas, size 40x50cm. 2021.</p>
+            <p>Oil on canvas, size 40x50cm. 2021. By Olga Bazanova's masterclass.</p>
             <hr>
         </div>
 
         <div class="album">
             <img src="assets/images/domik.jpg" alt="A small house in the middle of the lake">
             <h3> A Little House</h3>
-            <p>Oil on canvas, size 20x30cm. 2020.</p>
+            <p>Oil on canvas, size 20x30cm. 2020. By Olga Bazanova's masterclass.</p>
             <hr>
         </div>
         <div class="album">
             <img src="assets/images/sail.jpg" alt="A sailboat at dawn">
             <h3>The Sail</h3>
-            <p>Oil, canvas on cardboard, size 10x15cm. 2021.</p>
+            <p>Oil, canvas on cardboard, size 10x15cm. 2021. By Olga Bazanova's masterclass.</p>
             <hr>
         </div>
     </section><br>
@@ -217,7 +217,7 @@
         <div class="album">
             <img src="assets/images/poppy-sunset.jpg" alt="Poppies at sunset near the sea">
             <h3>Poppies at sunset</h3>
-            <p>Oil, canvas on cardboard, size 30x40cm. 2021.</p>
+            <p>Oil, canvas on cardboard, size 30x40cm. 2021. By Olga Bazanova's masterclass.</p>
             <hr>
         </div>
 
@@ -242,14 +242,14 @@
         <div class="album">
             <img src="assets/images/kinkade-big.jpg" alt="A little house in the forest by Thomas Kinkade">
             <h3>A little house in the forest </h3>
-            <p>Oil paint on canvas, size 35x45cm. 2021.Copy of Thomas Kinkade's picture</p>
+            <p>Oil paint on canvas, size 35x45cm. 2021.Copy of Thomas Kinkade's picture. By Olga Bazanova's masterclass.</p>
             <hr>
         </div>
 
         <div class="album">
             <img src=" assets/images/kinkade-jr.jpg" alt="A little house in the forest by Thomas Kinkade">
             <h3>A little house in the forest </h3>
-            <p>Oil paint on canvas, size 20x30cm. 2021.Copy of Thomas Kinkade's picture</p>
+            <p>Oil paint on canvas, size 20x30cm. 2021.Copy of Thomas Kinkade's picture. By Olga Bazanova's masterclass.</p>
             <hr>
         </div>
     </section><br>
@@ -274,7 +274,7 @@
         <div class="album">
             <img src="assets/images/cliff.jpg" alt="The Cliff and the sea">
             <h3> The Cliff</h3>
-            <p>Oil, canvas on cardboard, size 10x15cm. 2021.</p>
+            <p>Oil, canvas on cardboard, size 10x15cm. 2021. </p>
             <hr>
         </div>
 
