Set style to media queries screen size 1200px and less

--- a/animals.html
+++ b/animals.html
@@ -48,7 +48,7 @@
 
     <section>
 
-        <div class="album">
+        <div class="album clear">
             <img src="assets/images/blue-eyed.jpg" alt="blue-eyed kitty">
             <h3>Blue-eyed kitty</h3>
             <p>Oil paint on canvas, size 30x20cm. 2022.</p>
