--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
                 <p>
                     This site presents the artistic creativity of a simple Ukrainian woman and her
                     concept of beauty as
-                    she sees it. </p><br><br>
+                    she sees it. </p><br>
 
                 <p> Julia Nikolaevna Vasilenko took her creative pseudonym Juniva - according to the first couple of
                     letters of her full name. Juniva is self-taught, she took master
                     classes from various artists, but she does not have a systematic art education. He paints only by
                     inspiration, in a good mood, and believes
-                    that this state is transmitted to the audience.</p> <br><br>
+                    that this state is transmitted to the audience.</p> <br>
 
                 <p> It cannot be said that Julia loved to paint since childhood. She did not have any
                     special talents
@@ -70,11 +70,11 @@
 
                 <p> Definitely, cats and especially the
                     expression of their eyes is what inspires the artist to create and causes approval from her
-                    friends.</p><br> <br>
+                    friends.</p><br>
 
                 <p> Juniva's creative research has several time periods. The first period of active
                     creativity fell on 1982-1985, and the last one began
-                    a couple of years ago, in 2020. In the interim, only a few paintings were painted.</p><br><br>
+                    a couple of years ago, in 2020. In the interim, only a few paintings were painted.</p><br> 
 
                 <p> The following are three thematic albums - animals, landscapes and flowers. We
                     suggest clicking on
@@ -165,7 +165,7 @@
                 <img src="assets/images/cover-buket.jpg" alt="Painting of Bouquet of flowers">
                 <a href="https://youtu.be/guKf2rSqzA8" target="_blank" rel="noopener"
                     aria-label="YouTube video on Painting by Olga Bazanova - Sunny Bouquet (opens in new tab)">YouTube
-                    video on Painting by Olga Bazanova - Sunny Bouquet</a>
+                    video on Painting by O.Bazanova - Sunny Bouquet</a>
                 
             </span>
         </div>
