--- a/landscapes.html
+++ b/landscapes.html
@@ -48,7 +48,7 @@
 
     <section>
 
-        <div class="album">
+        <div class="album clear">
             <img src="assets/images/breakfast.jpg" alt="Picture of the table with served breakfast near the sea">
             <h3>Breakfast at the sea</h3>
             <p>Oil on canvas, size 50x50cm. 2021.</p>
