--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         <div class="text-center">
             You can see more Juniva's paintings on  <i class="fa-brands fa-instagram-square"></i>&nbsp;<a href="https://instagram.com/juniva.art" target="_blank" rel="noopener" aria-label="Visit Juniva's page on Instagram (opens in new tab)">Instagram</a><br>
             If you have question or offers please contact Juniva by Direct in Instagram.<br>
-            Copyright Juniva 1981-2022.
+            Copyright  &copy; Juniva 1981-2022.
         </div>
         
     </footer>
