--- a/landscapes.html
+++ b/landscapes.html
@@ -293,7 +293,7 @@
                 href="https://instagram.com/juniva.art" target="_blank" rel="noopener"
                 aria-label="Visit Juniva's page on Instagram (opens in new tab)">Instagram</a><br>
             If you have question or offers please contact Juniva by Direct in Instagram.<br>
-            Copyright Juniva 1981-2022.
+            Copyright  &copy; Juniva 1981-2022.
         </div>
 
     </footer>
