Embed YouTube video to main page

--- a/animals.html
+++ b/animals.html
@@ -47,7 +47,7 @@
     <!--  1st row of animal paintings -->
 
     <section>
-
+      <div class="container">
         <div class="album clear">
             <img src="assets/images/blue-eyed.jpg" alt="blue-eyed kitty">
             <h3>Blue-eyed kitty</h3>
@@ -71,7 +71,7 @@
 
             <hr>
         </div>
-
+       </div>
     </section><br>
 
     <!-- Second row of animal paintings -->
