Add and style social links on  all pages

--- a/animals.html
+++ b/animals.html
@@ -282,13 +282,14 @@
 
   <!--  Footer the same as on the main page -->
 
-  <footer class="clear contacts" id="footer">
+     
+ <footer class="clear contacts" id="footer">
     <div class="text-center">
-        You can see more Juniva's paintings on  <i class="fa-brands fa-instagram-square"></i>&nbsp;<a href="https://instagram.com/juniva.art" target="_blank" rel="noopener" aria-label="Visit Juniva's page on Instagram (opens in new tab)">Instagram</a><br>
-        If you have question or offers please contact Juniva by Direct in Instagram.<br>
+        Contact us on  &nbsp;&nbsp; <i class="fa-brands fa-instagram"></i>&nbsp;<a href="https://instagram.com/juniva.art" target="_blank" rel="noopener" aria-label="Visit Juniva's page on Instagram (opens in new tab)">Instagram</a> &nbsp;&nbsp;
+         <i class="fa-brands fa-twitter"></i>&nbsp;<a href="https://twitter.com/" target="_blank" rel="noopener" aria-label="Go to Twitter (opens in new tab)">Twitter</a> &nbsp;&nbsp;
+         <i class="fa-brands fa-facebook"></i>&nbsp;<a href="https://facebook.com/" target="_blank" rel="noopener" aria-label="Go to Facebook (opens in new tab)">Facebook</a><br><br>
         Copyright  &copy; Juniva 1981-2022.
     </div>
-    
 </footer>
 
 <!--  Fontawesome script  -->
