Styl reeponsive design of  animals page for mobile phones

--- a/animals.html
+++ b/animals.html
@@ -21,7 +21,7 @@
             <h2 id="motto">Sweet pictures to feast your eyes :)</h2>
         </div>
 
-
+<div class="container">
         <nav>
             <ul id="menu">
                 <li>
@@ -43,37 +43,37 @@
             </ul>
         </nav>
     </header>
+</div>    
 
     <!--  1st row of animal paintings -->
 
     <section>
+        <div class="container">
+            <div class="album">
+                <img src="assets/images/blue-eyed.jpg" alt="blue-eyed kitty">
+                <h3>Blue-eyed kitty</h3>
+                <p>Oil paint on canvas, size 30x20cm. 2022.</p>
+                <hr>
+            </div>
 
-        <div class="album clear">
-            <img src="assets/images/blue-eyed.jpg" alt="blue-eyed kitty">
-            <h3>Blue-eyed kitty</h3>
-            <p>Oil paint on canvas, size 30x20cm. 2022.</p>
-            <hr>
+            <div class="album">
+                <img src="assets/images/two-cats.jpg" alt="blue-eyed kitty">
+                <h3>Two Blue-eyed kitties</h3>
+                <p>They are two different paintings. <br> Oil paint on canvas, size 20x30cm. 2022.</p>
+                <hr>
+            </div>
+            <div class="album">
+                <img src="assets/images/turquoise.jpg" alt="Turquoise-eyed cat,very nice">
+                <h3>Turquoise</h3>
+                <p>Oil paint, canvas on cardboard, size 15x10cm. Juniva's copy of image from the Internet. Author is
+                    unknown. 2022.</p>
+                <hr>
+            </div>
         </div>
+    </section>
+    <!-- Second row of animal paintings -->
 
-        <div class="album">
-            <img src="assets/images/two-cats.jpg" alt="blue-eyed kitty">
-            <h3>Two Blue-eyed kitties</h3>
-            <p>They are two different paintings. <br> Oil paint on canvas, size 20x30cm. 2022.</p>
-            <hr>
-        </div>
-        <div class="album">
-            <img src="assets/images/turquoise.jpg" alt="Turquoise-eyed cat,very nice">
-            <h3>Turquoise</h3>
-            <p>Oil paint, canvas on cardboard, size 15x10cm. Juniva's copy of image from the Internet. Author is
-                unknown. 2022.</p>
-            <hr>
-        </div>
-        </div>
-
-
-        <!-- Second row of animal paintings -->
-
-
+    <section class="container">
         <div class="album">
             <img src="assets/images/irbis1.jpg" alt="Snow leopard">
             <h3>Snow leopard-1</h3>
@@ -94,12 +94,12 @@
             <p>Acrilic paint on the old leather coat, size approx. 30x40cm. 2020.</p>
             <hr>
         </div>
-
+        </div>
     </section><br>
 
     <!--Third row of animal paintings -->
 
-    <section>
+    <section class="container">
 
         <div class="album">
             <img src="assets/images/lubava.jpg" alt="Lubava the kitty">
@@ -126,7 +126,7 @@
 
     <!--4th row of animal paintings -->
 
-    <section>
+    <section class="container">
 
         <div class="album">
             <img src="assets/images/bantik1.jpg" alt="White kitty with a pink bow">
@@ -153,7 +153,7 @@
 
     <!--  5th row of animal paintings -->
 
-    <section>
+    <section class="container">
         <div class="album">
             <img src="assets/images/belka-tulip.jpg" alt="Squirrel with a tulip.">
             <h3>Squirrel with a tulip</h3>
@@ -177,7 +177,7 @@
 
     <!--  6th row of animal paintings -->
 
-    <section>
+    <section class="container">
         <div class="album">
             <img src="assets/images/tigercub.jpg" alt="Tigercub">
             <h3>Tigercub</h3>
@@ -202,7 +202,7 @@
 
     <!--  7th row of animal paintings -->
 
-    <section>
+    <section class="container">
         <div class="album">
             <img src="assets/images/kitten1.jpg" alt="Grey kitten-1">
             <h3>Kitten-1</h3>
@@ -227,7 +227,7 @@
 
     <!--  8th row of animal paintings -->
 
-    <section>
+    <section class="container">
         <div class="album">
             <img src="assets/images/cat.jpg" alt="A cat">
             <h3>Cat</h3>
@@ -253,7 +253,7 @@
 
     <!--  9th row of animal paintings -->
 
-    <section>
+    <section class="container">
 
         <div class="album">
             <img src="assets/images/belka-win.jpg" alt="Squirrel in Winter">
