--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <p> It cannot be said that Julia loved to paint since childhood. She did not have any
                     special talents
                     for painting, but it is interesting that
-                    the only drawing that has survived since then is a red cat on a red background, painted in gouache.
+                    the only drawing that has survived since then is a beige cat on a red background, painted in gouache.
                 </p>
             </div>
             <div class="column column-right">
@@ -200,14 +200,14 @@
   <input type="text" id="lname" name="lname"><br><br>
   
   
-  <label for="email">E-mail:</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  <label for="email">E-mail:</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <input type="email" id="email" name="email"> <br><br>
   
    
-  <label for="feedback">Please write your impressions. Do you like any picture?</label> <br>
+  <label for="feedback">Please write your impressions:</label> <br>
   <textarea id="feedback" name="feedback" rows="4" cols="50"> </textarea>
   <br>
-  <input type="submit" value="Submit">&nbsp; &nbsp;<input type="reset" value="Clear form">
+  <input class="button" type="submit" value="Submit">&nbsp; &nbsp;<input class="button" type="reset" value="Clear form">
 </form>
     </div><br>
     
