--- a/flowers.html
+++ b/flowers.html
@@ -21,7 +21,7 @@
             <h2 id="motto">Sweet pictures to feast your eyes :)</h2>
         </div>
 
-
+        <div class="container">
         <nav>
             <ul id="menu">
                 <li>
@@ -42,12 +42,13 @@
                 </li>
             </ul>
         </nav>
+        </div>
     </header>
 
     <!--  1st row of flowers paintings -->
 
     <section>
-
+        <div class="container">
         <div class="album">
             <img src="assets/images/summer-midday.jpg" alt="A Bunch of pink flowers on the window sill with a view to summer landscape">
             <h3>The summer midday</h3>
@@ -69,12 +70,13 @@
             <p>Oil, canvas on cardboard, size 30x40cm. 2021.  By Olga Bazanova's masterclass.</p>
             <hr>
         </div>
+    </div>
     </section><br>
 
     <!-- Second row of flowers paintings -->
 
     <section>
-
+        <div class="container">
         <div class="album">
             <img src="assets/images/buket.jpg" alt="A Bunch of field flowers, a book and apricots">
             <h3>The summer bouquet</h3>
@@ -95,12 +97,14 @@
             <p>Oil on canvas, 30x30cm. 2021.</p>
             <hr>
         </div>
+    </div>
     </section>
 
     <!--Third row of flowers paintings -->
 
 
     <section> 
+        <div class="container">
         <div class="album">
             <img src="assets/images/basket-lavender.jpg" alt="The basket with lavender">
             <h3>The basket with lavender.</h3>
@@ -119,6 +123,7 @@
         <h3>Daffodils</h3>
         <p>Oil, canvas on cardboard, size 25x30cm. 2022.</p>
         <hr>
+    </div>
     </div>
     </section><br>
     
