--- a/landscapes.html
+++ b/landscapes.html
@@ -21,7 +21,7 @@
             <h2 id="motto">Sweet pictures to feast your eyes :)</h2>
         </div>
 
-
+        <div class="container1">
         <nav>
             <ul id="menu">
                 <li>
@@ -42,12 +42,13 @@
                 </li>
             </ul>
         </nav>
+        </div>
     </header>
 
     <!--  1st row of landscape paintings -->
 
-    <section>
-
+    <section class="clear">
+        <div class="container"> 
         <div class="album clear">
             <img src="assets/images/breakfast.jpg" alt="Picture of the table with served breakfast near the sea">
             <h3>Breakfast at the sea</h3>
@@ -70,7 +71,7 @@
 
             <hr>
         </div>
-
+        </div>
     </section><br>
 
     <!-- Second row of landscape paintings -->
@@ -79,6 +80,7 @@
         <p class="text-center">Three copies were painted by the friend's request and all three looks a little different.
             Paintings were done by Olga Bazanova's masterclass in YouTube. </p>
 
+    <div class="container">
         <div class="album">
             <img src="assets/images/cap1.jpg" alt="Painting of Saint-Jean-Cap-Ferrat. 1st copy">
             <h3>Saint-Jean-Cap-Ferrat-1</h3>
@@ -99,6 +101,7 @@
             <p>Oil, canvas on cardboard, 30x40cm. 2020.</p>
             <hr>
         </div>
+    </div>
     </section>
 
     <!--Third row of landscape paintings -->
@@ -133,6 +136,7 @@
     </section>
 
     <section> 
+    <div class="container">    
     <div class="album">
         <img src="assets/images/moon-mice.jpg" alt="Funny picture where mice  fly on brooms to the Cheese Moon">
         <h3>The Cheese Moon</h3>
@@ -152,12 +156,13 @@
         <p>Oil, canvas on cardboard, size 30x40cm. 1981.</p>
         <hr>
     </div>
+    </div>
     </section><br>
 
     <!--4th row of landscape paintings -->
 
     <section>
-
+        <div class="container"> 
         <div class="album">
             <img src="assets/images/gurzuf.jpg" alt="Nice picture of the place called Gurzuf with the sea and mountain">
             <h3>Gurzuf</h3>
@@ -177,11 +182,13 @@
             <p>Oil on canvas, size 25x35cm. 2022. By Olga Bazanova's masterclass.</p>
             <hr>
         </div>
+        </div>
     </section><br>
 
     <!--  5th row of landscape paintings -->
 
     <section>
+        <div class="container">
         <div class="album">
             <img src="assets/images/yaht.jpg" alt="Yaht at dawn, the calm sea">
             <h3>The Yaht at Dawn</h3>
@@ -201,11 +208,13 @@
             <p>Oil, canvas on cardboard, size 10x15cm. 2021. By Olga Bazanova's masterclass.</p>
             <hr>
         </div>
+        </div>
     </section><br>
 
     <!--  6th row of landscape paintings -->
 
     <section>
+        <div class="container">
         <div class="album">
             <img src="assets/images/montenegro.jpg" alt="Montenegro, Igalo bay painting">
             <h3>Montenegro</h3>
@@ -227,11 +236,13 @@
             <p>Oil on canvas, size 40x50cm. 2009.</p>
             <hr>
         </div>
+        </div>
     </section><br>
 
     <!--  7th row of landscape paintings -->
 
     <section>
+        <div class="container">
         <div class="album">
             <img src="assets/images/igalo.jpg" alt="Montenegro, The Igalo Bay">
             <h3>The Igalo Bay. Montenegro</h3>
@@ -252,11 +263,13 @@
             <p>Oil paint on canvas, size 20x30cm. 2021.Copy of Thomas Kinkade's picture. By Olga Bazanova's masterclass.</p>
             <hr>
         </div>
+        </div>
     </section><br>
 
     <!--  8th row of landscape paintings -->
 
     <section>
+        <div class="container">
         <div class="album">
             <img src="assets/images/fujiyama.jpg" alt="Fujiyama picture">
             <h3>Fujiyama</h3>
@@ -277,7 +290,7 @@
             <p>Oil, canvas on cardboard, size 10x15cm. 2021. </p>
             <hr>
         </div>
-
+        </div>
     </section><br>
 
 <div class="text-center">
