--- a/flowers.html
+++ b/flowers.html
@@ -21,7 +21,7 @@
             <h2 id="motto">Sweet pictures to feast your eyes :)</h2>
         </div>
 
-        <div class="container">
+        <div class="container1">
         <nav>
             <ul id="menu">
                 <li>
@@ -47,7 +47,7 @@
 
     <!--  1st row of flowers paintings -->
 
-    <section>
+    <section class="clear">
         <div class="container">
         <div class="album">
             <img src="assets/images/summer-midday.jpg" alt="A Bunch of pink flowers on the window sill with a view to summer landscape">
