Style textarea on the main page

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div class="album">
                 <span>
                     <a href="animals.html" aria-label="Go to Animal Album"><img src="assets/images/cover-animal.jpg"
-                            alt="Animals Album">
+                            alt="Animals Album"> <br>
                         Animals Album
                     </a>
                 </span>
@@ -106,7 +106,7 @@
             <div class="album">
                 <span>
                     <a href="landscapes.html" aria-label="Go to Landscapes Album"><img
-                            src="assets/images/cover-land.jpg" alt="Landscapes Album">
+                            src="assets/images/cover-land.jpg" alt="Landscapes Album"><br>
                         Landscapes Album
                     </a>
                 </span>
@@ -115,7 +115,7 @@
             <div class="album">
                 <span>
                     <a href="flowers.html" aria-label="Go to Flowers Album"><img src="assets/images/cover-flower.jpg"
-                            alt="Flowers Album">
+                            alt="Flowers Album"><br>
                         Flowers Album
                     </a>
                 </span>
