Final tidy up of the code and texts

--- a/flowers.html
+++ b/flowers.html
@@ -21,7 +21,6 @@
             <h2 id="motto">Sweet pictures to feast your eyes :)</h2>
         </div>
 
-        <div class="container1">
         <nav>
             <ul id="menu">
                 <li>
@@ -42,7 +41,6 @@
                 </li>
             </ul>
         </nav>
-        </div>
     </header>
 
     <!--  1st row of flowers paintings -->
@@ -59,8 +57,8 @@
 
         <div class="album">
             <img src="assets/images/rozes.jpg" alt="Juniva at her picture with roses">
-            <h3>Juniva at her picture with roses. Roses.</h3>
-            <p>Oil on canvas, size 40x50cm. 2009.</p>
+            <h3>Juniva at her picture with roses. Roses. </h3>
+            <p>Oil on canvas, size 40x50cm. 2008. By Vladimir Grinev's masterclass.</p>
 
             <hr>
         </div>
