--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
             <h1 id="logo">Our Tiny Gallery</h1>
             <h2 id="motto">Sweet pictures to feast your eyes :)</h2>
         </div>
-        <div class="container1">
             <nav>
                 <ul id="menu">
                     <li>
@@ -40,7 +39,6 @@
                     </li>
                 </ul>
             </nav>
-        </div>
     </header>
 
 
@@ -154,43 +152,42 @@
         </div>
     </section>
 
-    <!--  Section with masterclasses on main page -->
-<div class="container">
-        <div class="album">  
-            <div class="iframe-container">    
+    <!--  Section with video masterclasses on main page -->
+    <div class="container">
+        <div class="album">
+            <div class="iframe-container">
                 <iframe width="450" height="253" src="https://www.youtube.com/embed/Jv68PVbNMTo" title="Masterclass 
                 in painting by Olga Bazanova - The Sailboat"></iframe>
             </div>
-                <a href="https://youtu.be/Jv68PVbNMTo" target="_blank" rel="noopener"
-                    aria-label="YouTube video on Painting by Olga Bazanova - The Sailboat (opens in new tab)">Masterclass
-                    in painting by Olga Bazanova - The Sailboat</a>
- 
+            <a href="https://youtu.be/Jv68PVbNMTo" target="_blank" rel="noopener"
+                aria-label="YouTube video on Painting by Olga Bazanova - The Sailboat (opens in new tab)">Masterclass
+                in painting by Olga Bazanova - The Sailboat</a>
+
         </div>
-<div class="video-wrapper"></div>
+
         <div class="album ">
             <div class="iframe-container">
                 <iframe width="450" height="253" src="https://www.youtube.com/embed/VSS830hj7JA" title="Masterclass by Tatyana Bukreeva - How to paint
                 a seascape"></iframe>
             </div>
-                <a href="https://youtu.be/VSS830hj7JA" target="_blank" rel="noopener"
-                    aria-label="YouTube video on Painting by Tatyana Bukreeva - How to paint a seascape (opens in new tab)">
-                    Masterclass by Tatyana Bukreeva - How to paint a seascape </a>
+            <a href="https://youtu.be/VSS830hj7JA" target="_blank" rel="noopener"
+                aria-label="YouTube video on Painting by Tatyana Bukreeva - How to paint a seascape (opens in new tab)">
+                Masterclass by Tatyana Bukreeva - How to paint a seascape </a>
         </div>
 
         <div class="album">
-            <div class="iframe-container"> 
+            <div class="iframe-container">
                 <iframe width="450" height="253" src="https://www.youtube.com/embed/obibsVklNVA" title="Masterclass
                 in technique Radiance by Alexandr Maranov - The Crocus"></iframe>
-                </div>
+            </div>
 
-                <a href="https://youtu.be/obibsVklNVA" target="_blank" rel="noopener"
-                    aria-label="YouTube video on Painting by Alexandr Maranov - The Crocus (opens in new tab)">Masterclass
-                    in technique Radiance by Alexandr Maranov - The Crocus </a>
+            <a href="https://youtu.be/obibsVklNVA" target="_blank" rel="noopener"
+                aria-label="YouTube video on Painting by Alexandr Maranov - The Crocus (opens in new tab)">Masterclass
+                in technique Radiance by Alexandr Maranov - The Crocus </a>
         </div>
-     
-</div>
+
     </div>
-</div><br>
+     <br>
 
     <div class="form text-center">
 
