--- a/landscapes.html
+++ b/landscapes.html
@@ -21,7 +21,6 @@
             <h2 id="motto">Sweet pictures to feast your eyes :)</h2>
         </div>
 
-        <div class="container1">
         <nav>
             <ul id="menu">
                 <li>
@@ -42,7 +41,6 @@
                 </li>
             </ul>
         </nav>
-        </div>
     </header>
 
     <!--  1st row of landscape paintings -->
@@ -77,7 +75,7 @@
     <!-- Second row of landscape paintings -->
 
     <section>
-        <p class="text-center">Three copies were painted by the friend's request and all three looks a little different.
+        <p class="text-center">Three copies were painted by the friend's request and all three look a little different.
             Paintings were done by Olga Bazanova's masterclass in YouTube. </p>
 
     <div class="container">
@@ -123,13 +121,13 @@
                 </p> <br><br>
             </div>
             <div class="column column-right">
-                <p> the Cheese Moon. And we can only guess about their intentions.😁 <br>
+                <p> the Cheese Moon. And we can only guess about their intentions.😁 <br><br>
 
                     The painting The Return is a copy of a painting by a Soviet artist, published in 1981 on the back
                     cover of the
                     Yunost magazine. This story impressed the young Juniva and she painted this picture in a larger
                     format. Clumsily,
-                    childishly, she tried to convey the feelings of the astronauts who returned to their native Earth
+                    childishly she tried to convey the feelings of the astronauts who returned to their native Earth
                     after a long flight into space. </p>
             </div>
         </div>
@@ -233,7 +231,7 @@
         <div class="album">
             <img src="assets/images/wave.jpg" alt="Sunlight wave in the blue sea ">
             <h3>Wave</h3>
-            <p>Oil on canvas, size 40x50cm. 2009.</p>
+            <p>Oil on canvas, size 40x50cm. 2008. By Vladimir Grinev's masterclass.</p>
             <hr>
         </div>
         </div>
